# pylint-django

./: .coveragerc  .gitignore  .landscape.yaml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTORS.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  pyproject.toml  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  release.yml  testing.yml  tests.yml
pylint_django/: __init__.py  __pkginfo__.py  common.py  compat.py  django_1_4.py  django_1_5.py  django_1_6.py  plugin.py  utils.py
pylint_django/augmentations/: __init__.py
pylint_django/checkers/: __init__.py  auth_user.py  db_performance.py  django_installed.py  foreign_key_strings.py  format_html.py  forms.py  json_response.py  migrations.py  modelcreate_forloop.py  modelfilter_forloop.py  models.py  modelsave_forloop.py  queryset_iterator.py
pylint_django/tests/: conftest.py  settings.py  test_django_not_installed.sh  test_func.py  testing_pylintrc
pylint_django/tests/input/: external_django_tables2_noerror_meta_class.py  external_drf_noerror_modelviewset.py  external_drf_noerror_serializer.py  external_drf_noerror_serializer.rc  external_factory_boy_noerror.py  external_factory_boy_noerror.rc  external_model_utils_noerror_override_manager.py  external_model_utils_noerror_override_manager.rc  external_psycopg2_noerror_postgres_fields.py  external_psycopg3_noerror_postgres_fields.py  external_psycopg3_noerror_postgres_fields.rc  external_tastypie_noerror_foreign_key.py  func_format_html.py  func_format_html.txt  func_hard_coded_auth_user.py  func_hard_coded_auth_user.txt  func_json_response.py  func_json_response.txt  func_model_does_not_use_unicode_py33.py  func_model_does_not_use_unicode_py33.txt  func_model_no_explicit_unicode_str_compat.py  func_model_no_explicit_unicode_str_compat.txt  func_modelform_exclude.py  func_modelform_exclude.txt  func_noerror_classviews.py  func_noerror_docstrings.py  func_noerror_duplicate_except_doesnotexist.py  func_noerror_factory_post_generation.py  func_noerror_foreign_key_attributes.py  func_noerror_foreign_key_ids.py  func_noerror_foreign_key_key_cls_unbound.py  func_noerror_foreign_key_package.py  func_noerror_foreign_key_sets.py  func_noerror_foreignkeys.py  func_noerror_form_fields.py  func_noerror_form_fields.txt  func_noerror_forms_py33.py  func_noerror_formview_ancestors.py  func_noerror_generic_foreign_key.py  func_noerror_gettext_lazy_format.py  (+27 more)
pylint_django/tests/input/migrations/: 0001_noerror_initial.py  0002_new_column.py  0002_new_column.txt  0003_without_backwards.py  0003_without_backwards.txt  0004_noerror_with_backwards.py
pylint_django/tests/input/models/: __init__.py  author.py  func_noerror_foreign_key_key_cls_unbound.py  func_noerror_foreign_key_key_cls_unbound_in_same_package.py  func_noerror_foreign_key_package.py
pylint_django/tests/input/test_app/: apps.py  models.py
pylint_django/tests/test_app/: models.py
pylint_django/transforms/: __init__.py  fields.py  foreignkey.py  queryset.py  text_choices.py
pylint_django/transforms/transforms/: django_contrib_postgres_fields.py  django_core_handlers_wsgi.py  django_db_models.py  django_db_models_fields.py  django_db_models_fields_files.py  django_db_models_fields_related.py  django_forms.py  django_forms_fields.py  django_utils_translation.py  django_views_generic_base.py  model_utils_managers.py  mongoengine.py
scripts/: build.sh  test.sh  test_django_not_installed.sh  travis-build.sh  travis-install.sh  travis-skip.py  travis_skip.py
test/: test_func.py  testutils.py
test/external_drf/: func_noerror_serializer.py
test/external_psycopg2/: func_noerror_postgres_fields.py
test/input/: external_django_tables2_noerror_meta_class.py  external_drf_noerror_serializer.py  external_psycopg2_noerror_postgres_fields.rc  func_model_does_not_use_unicode_py33.py  func_model_does_not_use_unicode_py33.txt  func_model_requires_unicode.py  func_model_requires_unicode_py_28.py  func_model_unicode_parent_py_28.py  func_noerror_classviews.py  func_noerror_duplicate_except_doesnotexist.py  func_noerror_foreign_key_attributes.py  func_noerror_foreign_key_ids.py  func_noerror_foreign_key_sets.py  func_noerror_foreignkeys.py  func_noerror_form_fields.py  func_noerror_forms.py  func_noerror_forms_py33.py  func_noerror_forms_py_28.py  func_noerror_formview_ancestors.py  func_noerror_ignore_meta_subclass.py  func_noerror_import_q.py  func_noerror_issue_46.py  func_noerror_manytomanyfield.py  func_noerror_model_fields.py  func_noerror_model_methods.py  func_noerror_model_unicode_callable.py  func_noerror_model_unicode_lambda.py  func_noerror_models.py  func_noerror_models_py33.py  func_noerror_models_py_28.py  func_noerror_protected_meta_access.py  func_noerror_proteted_meta_access.py  func_noerror_ugettext_lazy_format.py  func_noerror_unicode_py2_compatible.py  func_noerror_urls.py
test/input/versions/: func_noerror_proteted_meta_access.py
test/messages/: func_model_does_not_use_unicode_py33.txt  func_model_requires_unicode.txt  func_model_requires_unicode_py_28.txt  func_model_unicode_parent_py_28.txt
