[metadata]
name = pylint-django
version = 2.5.3
author = landscape.io
author_email = code@landscape.io
license = GPLv2
description = A Pylint plugin to help Pylint understand the Django web framework
keywords = pylint, django, plugin
url = https://github.com/PyCQA/pylint-django
long_description = file: README.rst, CHANGELOG.rst
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: Unix
    Topic :: Software Development :: Quality Assurance
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
project_urls =
    Changelog = https://github.com/PyCQA/pylint-django/blob/master/CHANGELOG.rst

[options]
packages = find:
zip_safe = False
install_requires = pylint-plugin-utils>=0.7; pylint>=2.0,<3
include_package_data = True

[options.extras_require]
with_django = Django
for_tests =
    django_tables2
    factory-boy
    coverage
    pytest
    wheel
    django-tastypie
    pylint>=2.13
